--- a/style.css
+++ b/style.css
@@ -1,659 +1,47 @@
-:root {
-	--primary-dark-blue: hsl(233, 26%, 24%);
-	--primary-lime-green: hsl(136, 65%, 51%);
-	--primary-bright-cyan: hsl(192, 70%, 51%);
-	--neutral-grayish-blue: hsl(233, 8%, 62%);
-	--neutral-light-grayish-blue: hsl(220, 16%, 96%);
-	--neutral-very-light-gray: hsl(0, 0%, 98%);
-	--neutral-white: hsl(0, 0%, 100%);
-	--light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-	--dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
-body {
-	overflow-x: hidden;
-	font-size: 18px;
-	font-family: 'Public Sans', sans-serif;
-}
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-a {
-	text-decoration: none;
-}
-
-li {
-	list-style: none;
-}
-
-.container {
+.projects #projects{
+	flex-direction: column;
 	max-width: 1200px;
-	width: 100%;
 	margin: 0 auto;
-}
-header {
-	box-shadow: var(--light-shadow);
+	padding: 100px ;
 }
 
-.flex {
+
+.projects .projects-header h1{
+	margin-botom: 50px;
+}
+
+.projects .all-projects{
 	display: flex;
-}
-
-.attribution {
-	font-size: 11px;
-	text-align: center;
-}
-
-.attribution a {
-	color: hsl(228, 45%, 44%);
-}
-
-header {
-	background-color: white;
-	font-size: 18px;
-	position: relative;
-	z-index: 100;
-	/* background-color: var(--neutral-very-light-gray); */
-}
-
-nav {
-	display: flex;
-	justify-content: space-between;
 	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 }
 
-nav > ul {
+.projects .project-item{
 	display: flex;
-}
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	width: 80%;
+	margin: 20px auto;
+	overflow: hidden;
+	border-radius: 10px;
+} 
 
-nav ul li {
-	padding-right: 30px;
-}
-
-.nav-link {
-	color: rgba(0, 0, 0, 0.5);
-	position: relative;
-	/*dont know why? should ask someone */
-}
-
-.nav-link:hover::before {
-	content: '';
-	position: absolute;
-	left: 0;
-	bottom: -50px;
-	height: 5px;
-	width: 100%;
-	background: linear-gradient(
-		90deg,
-		rgba(49, 211, 92, 1) 30%,
-		rgba(43, 183, 218, 1) 93%
-	);
-}
-
-.nav-link:hover {
-	color: var(--primary-dark-blue);
-}
-
-.button {
-	padding: 15px 30px;
-	color: white;
-	border: none;
-	cursor: pointer;
-	font-weight: bold;
-	border-radius: 30px;
-	background: linear-gradient(
-		90deg,
-		rgba(49, 211, 92, 1) 30%,
-		rgba(43, 183, 218, 1) 93%
-	);
-}
-
-.button:hover {
-	opacity: 0.5;
-}
-
-#hero {
-	width: 100%;
-	background-image: url(images/bg-intro-desktop.svg);
-	background-repeat: no-repeat;
-	background-position-x: 624px;
-	background-position-y: -260px;
-}
-
-.next-gen {
-	display: flex;
-}
-
-.left {
-	padding-right: 110px;
-}
-
-.left h2 {
-	margin-top: 120px;
-	font-size: 50px;
-	font-weight: 300;
-	color: var(--primary-dark-blue);
-}
-
-.left p {
-	margin-top: 30px;
-	line-height: 1.7;
-	color: var(--neutral-grayish-blue);
-}
-
-.mg-top {
-	margin-top: 30px;
-}
-
-.right img {
-	margin: -120px -245px -100px 0;
-}
-
-.hamburger {
-	display: none;
-}
-
-.open {
-	display: block;
-}
-
-.close {
-	display: none;
-}
-
-#card {
-	margin-top: 0px;
-	background-color: var(--neutral-light-grayish-blue);
-}
-.card-header {
-	padding-top: 100px;
-}
-.card-header > h2 {
-	color: var(--primary-dark-blue);
-	font-weight: 300;
-	font-size: 33px;
-}
-.card-header > p {
-	margin-top: 40px;
-	line-height: 1.7;
-	color: var(--neutral-grayish-blue);
-	padding-right: 400px;
-}
-.logo {
-	width: 200px;
-}
-
-/*grid*/
-.col4 {
-	grid-column-end: span 3;
-}
-.grid {
-	margin-top: 100px;
-}
-.glutter-grid {
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-gap: 20px;
-}
-.grid-content {
-	padding: 0 10px;
-}
-.grid-content h3 {
-	margin-top: 20px;
-	font-size: 20px;
-	color: var(--primary-dark-blue);
-	font-weight: 300;
-}
-.grid-content p {
-	line-height: 1.7;
-	margin-top: 20px;
-	color: var(--neutral-grayish-blue);
-}
-@media only screen and (max-width: 800px) {
-	.hide {
-		display: none;
-	}
-
-	header {
-		padding: 20px 0;
-	}
-
-	nav > ul {
-		display: none;
-	}
-
-	nav > ul > li {
-		padding: 15px 10px;
-	}
-
-	.nav-link {
-		color: var(--primary-dark-blue);
-	}
-
-	.hamburger {
-		margin-right: 30px;
-		display: block;
-	}
-
-	.show {
-		display: block;
-		text-align: center;
-		position: absolute;
-		top: 75px;
-		border-radius: 5px;
-		box-shadow: 0px 50px 118px 10px rgba(0, 0, 0, 1);
-		width: 90%;
-		background-color: var(--neutral-white);
-		left: 5%;
-	}
-
-	.nav-link:hover::before {
-		content: '';
-		position: absolute;
-		left: 0;
-		bottom: -15px;
-		height: 5px;
-		width: 100%;
-		background: linear-gradient(
-			90deg,
-			rgba(49, 211, 92, 1) 30%,
-			rgba(43, 183, 218, 1) 93%
-		);
-	}
-
-	#hero {
-		background-image: url(images/bg-intro-mobile.svg);
-		background-size: 100%;
-		background-position-x: 0;
-		background-position-y: -77px;
-	}
-
-	.next-gen {
-		flex-direction: column-reverse;
-	}
-
-	.right img {
-		margin: -292px 0;
-		width: 768px;
-		max-width: 100%;
-	}
-
-	.left {
-		text-align: center;
-		margin-top: 220px;
-		padding: 0 15px;
-	}
-
-	.left h2 {
-		font-size: 36px;
-	}
-
-	.left p {
-		font-size: 15px;
-	}
-	.md1 {
-		grid-column-end: span 12;
-	}
-	.grid-content {
-		padding: 0 20px;
-		text-align: center;
-	}
-	.grid-content p {
-		font-size: 16px;
-	}
-	.card-header {
-		padding: 0 20px;
-		text-align: center;
-	}
-	#card {
-		margin-top: 20px;
-		padding-top: 50px;
-	}
-	.card-header > p {
-		padding-right: 0px;
-	}
-}
-
-/* TIMELINE
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.hexa {
-	border: 0px;
-	float: left;
-	text-align: center;
-	height: 35px;
-	width: 60px;
-	font-size: 22px;
-	background: #f0f0f0;
-	color: #3c3c3c;
-	position: relative;
-	margin-top: 15px;
-}
-
-.hexa:before {
-	content: '';
-	position: absolute;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-bottom: 15px solid #f0f0f0;
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	top: -15px;
-}
-
-.hexa:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	border-top: 15px solid #f0f0f0;
-	bottom: -15px;
-}
-
-.timeline {
-	position: relative;
-	padding: 0;
-	width: 100%;
-	margin-top: 20px;
-	list-style-type: none;
-}
-
-.timeline:before {
-	position: absolute;
-	left: 50%;
-	top: 0;
-	content: ' ';
-	display: block;
-	width: 2px;
+.projects .project-info{
+	padding: 30px;
+	flex-basis: 50%;
+	background-color: #8fd3f4;
 	height: 100%;
-	margin-left: -1px;
-	background: rgb(213, 213, 213);
-	background: -moz-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		color-stop(0%, rgba(30, 87, 153, 1)),
-		color-stop(100%, rgba(125, 185, 232, 1))
-	);
-	background: -webkit-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -o-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -ms-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: linear-gradient(
-		to bottom,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	z-index: 5;
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	justify-content: center;
+	color
+} 
+
+
+.projects .project-info h1{ 
+	font-size: 4rem;
+	font-weight: 500;
 }
-
-.timeline li {
-	padding: 2em 0;
-}
-
-.timeline .hexa {
-	width: 16px;
-	height: 10px;
-	position: absolute;
-	background: #00c4f3;
-	z-index: 5;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
-	top: -30px;
-	margin-top: 0;
-}
-
-.timeline .hexa:before {
-	border-bottom: 4px solid #00c4f3;
-	border-left-width: 8px;
-	border-right-width: 8px;
-	top: -4px;
-}
-
-.timeline .hexa:after {
-	border-left-width: 8px;
-	border-right-width: 8px;
-	border-top: 4px solid #00c4f3;
-	bottom: -4px;
-}
-
-.direction-l,
-.direction-r {
-	float: none;
-	width: 100%;
-	text-align: center;
-}
-
-.flag-wrapper {
-	text-align: center;
-	position: relative;
-}
-
-.flag {
-	position: relative;
-	display: inline;
-	background: rgb(255, 255, 255);
-	font-weight: 600;
-	z-index: 15;
-	padding: 6px 10px;
-	text-align: left;
-	border-radius: 5px;
-}
-
-.direction-l .flag:after,
-.direction-r .flag:after {
-	content: '';
-	position: absolute;
-	left: 50%;
-	top: -15px;
-	height: 0;
-	width: 0;
-	margin-left: -8px;
-	border: solid transparent;
-	border-bottom-color: rgb(255, 255, 255);
-	border-width: 8px;
-	pointer-events: none;
-}
-
-.direction-l .flag {
-	-webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15),
-		0 0 1px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-	box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-}
-
-.direction-r .flag {
-	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15),
-		0 0 1px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-}
-
-.time-wrapper {
-	display: block;
-	position: relative;
-	margin: 4px 0 0 0;
-	z-index: 14;
-	line-height: 1em;
-	vertical-align: middle;
-	color: #fff;
-}
-
-.direction-l .time-wrapper {
-	float: none;
-}
-
-.direction-r .time-wrapper {
-	float: none;
-}
-
-.time {
-	background: #00c4f3;
-	display: inline-block;
-	padding: 8px;
-}
-
-.desc {
-	position: relative;
-	margin: 1em 0 0 0;
-	padding: 1em;
-	background: rgb(254, 254, 254);
-	-webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	z-index: 15;
-}
-
-.direction-l .desc,
-.direction-r .desc {
-	position: relative;
-	margin: 1em 1em 0 1em;
-	padding: 1em;
-	z-index: 15;
-}
-
-@media (min-width: 768px) {
-	.timeline {
-		width: 660px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-
-	.timeline li:after {
-		content: '';
-		display: block;
-		height: 0;
-		clear: both;
-		visibility: hidden;
-	}
-
-	.timeline .hexa {
-		left: -28px;
-		right: auto;
-		top: 8px;
-	}
-
-	.timeline .direction-l .hexa {
-		left: auto;
-		right: -28px;
-	}
-
-	.direction-l {
-		position: relative;
-		width: 310px;
-		float: left;
-		text-align: right;
-	}
-
-	.direction-r {
-		position: relative;
-		width: 310px;
-		float: right;
-		text-align: left;
-	}
-
-	.flag-wrapper {
-		display: inline-block;
-	}
-
-	.flag {
-		font-size: 18px;
-	}
-
-	.direction-l .flag:after {
-		left: auto;
-		right: -16px;
-		top: 50%;
-		margin-top: -8px;
-		border: solid transparent;
-		border-left-color: rgb(254, 254, 254);
-		border-width: 8px;
-	}
-
-	.direction-r .flag:after {
-		top: 50%;
-		margin-top: -8px;
-		border: solid transparent;
-		border-right-color: rgb(254, 254, 254);
-		border-width: 8px;
-		left: -8px;
-	}
-
-	.time-wrapper {
-		display: inline;
-		vertical-align: middle;
-		margin: 0;
-	}
-
-	.direction-l .time-wrapper {
-		float: left;
-	}
-
-	.direction-r .time-wrapper {
-		float: right;
-	}
-
-	.time {
-		padding: 5px 10px;
-	}
-
-	.direction-r .desc {
-		margin: 1em 0 0 0.75em;
-	}
-}
-
-@media (min-width: 992px) {
-	.timeline {
-		width: 800px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-
-	.direction-l {
-		position: relative;
-		width: 380px;
-		float: left;
-		text-align: right;
-	}
-
-	.direction-r {
-		position: relative;
-		width: 380px;
-		float: right;
-		text-align: left;
-	}
-}
-/*end of Timeline*/
